[gd_scene load_steps=5 format=3 uid="uid://bt4kc8oa72in2"]

[ext_resource type="Script" uid="uid://c7gyykqfnu0wl" path="res://main/card_database.gd" id="1_ynwbq"]
[ext_resource type="Script" uid="uid://bss7gssxhkutk" path="res://CivilWar/civil_war.gd" id="2_ro6sk"]
[ext_resource type="PackedScene" uid="uid://62xo4wcay34u" path="res://Card/card.tscn" id="3_ro6sk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1t8k8"]
bg_color = Color(0.6167221, 0.59608734, 0.8305756, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="YugiBoy" type="Control"]
custom_minimum_size = Vector2(1600, 900)
layout_mode = 3
anchors_preset = 0

[node name="CardDatabase" type="Node" parent="."]
script = ExtResource("1_ynwbq")

[node name="HTTPRequest" type="HTTPRequest" parent="CardDatabase"]

[node name="CivilWar" type="Node" parent="."]
script = ExtResource("2_ro6sk")

[node name="RaceLabel" type="Label" parent="CivilWar"]
offset_right = 179.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 24

[node name="RollRaceButton" type="Button" parent="CivilWar"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 110.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Reroll race"

[node name="ToolTipPanel" type="Panel" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 900.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1t8k8")

[node name="TooltipArea" type="VBoxContainer" parent="ToolTipPanel"]
layout_mode = 1
offset_right = 400.0
offset_bottom = 850.0

[node name="CardImage" parent="ToolTipPanel/TooltipArea" instance=ExtResource("3_ro6sk")]
layout_mode = 2
size_flags_vertical = 1
expand_mode = 5

[node name="UIPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 50.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1t8k8")

[node name="UIlayer" type="HBoxContainer" parent="UIPanel"]
custom_minimum_size = Vector2(1600, 50)
layout_mode = 0
offset_right = 1600.0
offset_bottom = 50.0

[node name="PackPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 50.0
offset_right = 1600.0
offset_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1t8k8")

[node name="PackContainer" type="GridContainer" parent="PackPanel"]
custom_minimum_size = Vector2(1200, 180)
layout_mode = 0
offset_right = 1200.0
offset_bottom = 180.0
pivot_offset = Vector2(10, 10)
theme_override_constants/h_separation = 0
columns = 10

[node name="MainDeckPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 230.0
offset_right = 1600.0
offset_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1t8k8")

[node name="Deck" type="GridContainer" parent="MainDeckPanel"]
custom_minimum_size = Vector2(1200, 600)
layout_mode = 0
offset_right = 1200.0
offset_bottom = 600.0

[node name="ExtraDeckPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 730.0
offset_right = 1600.0
offset_bottom = 900.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1t8k8")

[node name="ExtraDeckContainer" type="GridContainer" parent="ExtraDeckPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="request_completed" from="CardDatabase/HTTPRequest" to="CardDatabase" method="_on_http_request_completed"]
[connection signal="pressed" from="CivilWar/RollRaceButton" to="CivilWar" method="_on_roll_race_button_pressed"]
